--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.unity.2d.animation": "10.2.1",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.cinemachine": "3.1.4",
     "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.ide.rider": "3.0.36",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
